# piezo-accelerometer

./: Cargo.toml  README.md  calculations.asv  calculations.m
calculations/: acc_ref.m  characterization.m  charge_amplifier_calculations.m
embedded/: Cargo.toml
embedded/src/: main.rs
esp32c3-processing/: Cargo.toml
info-display/: read_uart.py
reference_accelerometer/: reference_accelerometer.ino
