[package]
edition      = "2024"
name         = "esp32c3-processing"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32c3-processing"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["esp32c3"] } 
esp-idf-sys = "0.36.1"
cargo-espflash = "4.3.0"
espflash = "4.3.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
